ec2-classic-elb.yml
---
Description: "This is a simple, basic ec2 template."

Parameters:
  myVPC:
    Type: String
    Default: vpc-75f4cb0d
    Description: "Default VPC ID"
  myAMI:
    Type: String
    Default: ami-acc0f0d6
    Description: "Web VM AMI"

Mappings:
  DefaultVPC:
    SubnetMap:
      1b: "subnet-f0e1b194"
      1d: "subnet-1a7f5b51"
      1c: "subnet-940798bb"
      1e: "subnet-75016f4a"
      1a: "subnet-fc42d1a1"
      1f: "subnet-0623d609"

Resources:
  MyWebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: WEB-DMZ
      GroupDescription: Allow HTTP and SSH
  #    VpcId:
  #      Ref: myVPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
  MyELBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: ELB-SG
      GroupDescription: Allow HTTP
  #     VpcId:
  #       Ref: myVPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0

  MyEC2Instance1:
    Type: "AWS::EC2::Instance"
    Properties:
      InstanceType: t2.micro
      ImageId:
        Ref: myAMI
      SecurityGroups: [!Ref MyWebSecurityGroup]
      KeyName: us-east-1-keys
    DependsOn: MyWebSecurityGroup
  MyEC2Instance2:
    Type: "AWS::EC2::Instance"
    Properties:
      InstanceType: t2.micro
      ImageId:
        Ref: myAMI
      SecurityGroups: [!Ref MyWebSecurityGroup]
      KeyName: us-east-1-keys
    DependsOn: MyWebSecurityGroup

  MyELB:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      AvailabilityZones:
        Fn::GetAZs: ''
      Instances:
        - Ref: MyEC2Instance1
        - Ref: MyEC2Instance2
      Listeners:
      - LoadBalancerPort: '80'
        InstancePort: '80'
        Protocol: HTTP      
      SecurityGroups: [!GetAtt MyELBSecurityGroup.GroupId]
    DependsOn: [ MyEC2Instance2, MyEC2Instance1, MyELBSecurityGroup ]
